<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/white"
	android:orientation="vertical"
	android:padding="10dp">

	<TextView
		android:id="@+id/textView8"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/name"
		android:textColor="@color/deep_orange_300"
		android:textSize="24sp"
		tools:ignore="TextContrastCheck" />

	<EditText
		android:id="@+id/equipment_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:hint="@string/name"
		android:singleLine="true"
		android:textColor="@color/amber_700"
		android:textSize="20sp"
		tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

	<TextView
		android:id="@+id/textView9"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/model"
		android:textColor="@color/deep_orange_300"
		android:textSize="24sp"
		tools:ignore="TextContrastCheck" />

	<EditText
		android:id="@+id/equipment_model"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:hint="@string/model"
		android:singleLine="true"
		android:textColor="@color/amber_700"
		android:textSize="20sp"
		tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/local"
		android:textColor="@color/deep_orange_300"
		android:textSize="24sp"
		tools:ignore="TextContrastCheck" />

	<Spinner
		android:id="@+id/spinner_local"
		android:layout_width="match_parent"
		android:layout_height="40sp"
		android:background="@drawable/style_background"
		android:popupBackground="@drawable/style_background"
		tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/company"
		android:textColor="@color/deep_orange_300"
		android:textSize="24sp"
		tools:ignore="TextContrastCheck" />

	<Spinner
		android:id="@+id/spinner_company"
		android:layout_width="match_parent"
		android:layout_height="40sp"
		android:background="@drawable/style_background"
		android:popupBackground="@drawable/style_background"
		tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/factory"
		android:textColor="@color/deep_orange_300"
		android:textSize="24sp"
		tools:ignore="TextContrastCheck" />

	<Spinner
		android:id="@+id/spinner_factory"
		android:layout_width="match_parent"
		android:layout_height="40sp"
		android:background="@drawable/style_background"
		android:popupBackground="@drawable/style_background"
		tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/system"
		android:textColor="@color/deep_orange_300"
		android:textSize="24sp"
		tools:ignore="TextContrastCheck" />

	<Spinner
		android:id="@+id/spinner_system"
		android:layout_width="match_parent"
		android:layout_height="40sp"
		android:background="@drawable/style_background"
		android:popupBackground="@drawable/style_background"
		tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

	<TextView
		android:id="@+id/textView6"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/status"
		android:textColor="@color/deep_orange_300"
		android:textSize="24sp"
		tools:ignore="TextContrastCheck" />

	<Spinner
		android:id="@+id/spinner_status"
		android:layout_width="match_parent"
		android:layout_height="40sp"
		android:background="@drawable/style_background"
		android:popupBackground="@drawable/style_background"
		tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/type"
		android:textColor="@color/deep_orange_300"
		android:textSize="24sp"
		tools:ignore="TextContrastCheck" />

	<Spinner
		android:id="@+id/spinner_type"
		android:layout_width="match_parent"
		android:layout_height="40sp"
		android:background="@drawable/style_background"
		android:popupBackground="@drawable/style_background"
		tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</LinearLayout>
